--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -1,12 +1,23 @@
  * { 
     box-sizing: border-box;
-    padding: 0;
+    padding: 5px;
     margin: 0;
 }
 
 body {
     background-color: #d9dcd6;
 }
+
+a {
+    color: #ffffff;
+    text-decoration: none;
+    padding: 10px;
+}
+
+p {
+    font-size: 16px;
+}
+
 /*changed the .header to the header tag*/
 header {
     padding: 20px;
@@ -20,7 +31,7 @@ header h1 {
     font-size: 48px;
 }
 
-header h1 .seo {
+#seo {
     color: #d9dcd6;
 }
 
@@ -34,15 +45,6 @@ nav {
 /* got rid of class since only 1 list also added padding to ul and a float in order to reposition it correctly.  consolidated ul and li in nav tag*/
 
 
-a {
-    color: #ffffff;
-    text-decoration: none;
-    padding: 10px;
-}
-
-p {
-    font-size: 16px;
-}
 
 .hero {
     height: 800px;
@@ -64,11 +66,13 @@ p {
 .float-left {
     float: left;
     margin-right: 25px;
+    
 }
 
 .float-right {
     float: right;
     margin-left: 25px;
+
 }
 
 
@@ -82,6 +86,8 @@ p {
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
+    margin-bottom: 32px;
+    color: #ffffff;
 }
 
 /* consolidated more redundant tags*/
@@ -92,7 +98,7 @@ p {
 
 /*consolidated the h3 styles*/
 .benefits h3 {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     text-align: center;
 }
 
@@ -106,7 +112,7 @@ p {
 
 /* removed redundant classes and used id tags */
 #search-engine-optimization {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -115,7 +121,7 @@ p {
 }
 
 #online-reputation-management {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -124,7 +130,7 @@ p {
 }
 
 #social-media-marketing {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
